--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-promise": "^7.2.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "react": "19.1.0",
